--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy New year</title>
+	<title>Happy New Year</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Xola">
 	<meta name="robots" content="index, follow" />
@@ -39,7 +39,7 @@
     	<h2 style="color:#F2B300;">H</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">p</h2>
+    	<h2 style="color:#0719D4;">P</h2>
     </div>
 	<div class="balloons text-center" id="b3">
     	<h2 style="color:#D14D39;">N</h2>
@@ -104,18 +104,16 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Chúc mừng năm mới bạn 🌊</p>
-				<p>Năm mới chúc bạn </p>
-				<p>Mạnh Khoẻo bên người thân</p>
-				<p>đồng hành cùng may mắn</p>
-				<p>hừng hực vs ước mơ</p>
-				<p>xinh xắn bên ny(chắc thế)</p>
-				
+				<p>Chúc mừng năm mới chị Thảo</p>
+				<p>aka Thỉa Pạo + cháo thỏ</p>
+				<p>năm mới chúc chị</p>
+				<p>mạnh khoẻo bên người thân</p>
+				<p>vui vẻ vs bạn bè</p>
 				<p><strong>Và</strong></p>
-				<p>chúc bạn thi tốt</p>
-				<p>Để còn được đi 🌊</p>
-				<p>Tái Bút:</p>
-				<p>Nhớ đỗ cấp 3 nhá🤡</p>
+				<p>quyết tâm với ước mơ</p>
+				<p>hạnh phúc vs cuộc đời</p>
+				<p>thành công vs các cuộc thi </p>
+				<p>Vậy nhé!</p>
 				
 			</div>
 		</div>
